# 112EpicDrawingProject

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mingw32  dot.h  idgenerator.cpp  main.cpp  segment.h  storage.cpp  storage.h
ID/: idgenerator.h
base/: base.cpp  base.h
darawing /: bitmap.cpp
drawing/: IDrawing.h  bitmap.cpp  bitmap.h  bitmap_manager.cpp  bitmap_manager.h  read.me
drawing /: bitmap.h
drawing/test/: CMakeLists.txt  test_bitmap.cpp
objects/: dot.h  read.me  segment.h
storage/: mapper.h  read.me  storage.cpp  storage.h
storage/tests/: CMakeLists.txt  test_mapper.cpp  test_storage.cpp
tests/: read.me  tests.cpp  tests.h
ui/: CMakeLists.txt
ui/src/: main.cpp
